buildscript {
    ext {
        springBootVersion = '2.+'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

group = 'com.zorg'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = 11

springBoot {
    mainClassName = "com.zorg.zombies.ZombiesApplication"
}

repositories {
    mavenCentral()
}

configurations {
    compile.exclude module: 'spring-boot-starter-tomcat'
}

dependencies {
    compile('org.projectlombok:lombok')
    compile('org.springframework.boot:spring-boot-starter-actuator')
    compile('org.springframework.boot:spring-boot-starter-webflux')
    compile('org.springframework.boot:spring-boot-starter-websocket')
    compile('org.springframework.boot:spring-boot-configuration-processor')
    compile group: 'javax.websocket', name: 'javax.websocket-api', version: '1.1', ext: 'pom'
    compile group: 'javax.websocket', name: 'javax.websocket-client-api', version: '1.1', ext: 'pom'
    testCompile('org.glassfish.tyrus.bundles:tyrus-standalone-client:1.8.3')
    runtime('org.springframework.boot:spring-boot-devtools')
    testCompile('org.springframework.boot:spring-boot-starter-test')
    testCompile('io.projectreactor:reactor-test')
    testImplementation('org.junit.jupiter:junit-jupiter-api')
    testImplementation('org.mockito:mockito-junit-jupiter:2.+')
    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine')
}

test {
    useJUnitPlatform()
}
